# rhythmface

./: .cursorrules  .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEMO_STATUS.md  IMPLEMENTATION_COMPLETE.md  INSTALLATION.md  LICENSE  Makefile  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  example_config.yaml  py.typed  pyproject.toml  setup.py
.github/workflows/: ci.yml
docs/: api.rst  conf.py  contributing.rst  development.rst  index.rst  modules.rst
docs/api/: assets.rst  audio.rst  config.rst  graphics.rst  logic.rst
docs/guides/: SETUP_COMPLETE.md
rhythmface/: __init__.py  cli.py  config.py
rhythmface/assets/: __init__.py  generator.py
rhythmface/audio/: __init__.py  mic_listener.py
rhythmface/graphics/: __init__.py  renderer.py
rhythmface/logic/: __init__.py  lipsync_engine.py
tests/: __init__.py  conftest.py  test_audio.py  test_graphics.py  test_logic.py
